# ckanext-vuhitra-ext

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/vuhitra_ext/: cli.py  helpers.py  plugin.py  views.py
ckanext/vuhitra_ext/assets/: script.js  webassets.yml
ckanext/vuhitra_ext/logic/: action.py  auth.py  schema.py  validators.py
ckanext/vuhitra_ext/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/vuhitra_ext/tests/logic/: test_action.py  test_auth.py  test_validators.py
