[metadata]
name = ckanext-vuhitra-ext
version = 0.0.1
description = CKAN base theme to support all other extensions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vuhitra i/o/ckanext-vuhitra-ext
author = toavina A.
author_email = toavina@vuhitra.io
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             vuhitra_ext = ckanext.vuhitra_ext.plugin:VuhitraExtPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/vuhitra_ext/i18n/ckanext-vuhitra_ext.pot
width = 80

[init_catalog]
domain = ckanext-vuhitra_ext
input_file = ckanext/vuhitra_ext/i18n/ckanext-vuhitra_ext.pot
output_dir = ckanext/vuhitra_ext/i18n

[update_catalog]
domain = ckanext-vuhitra_ext
input_file = ckanext/vuhitra_ext/i18n/ckanext-vuhitra_ext.pot
output_dir = ckanext/vuhitra_ext/i18n
previous = true

[compile_catalog]
domain = ckanext-vuhitra_ext
directory = ckanext/vuhitra_ext/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
